--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,9 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+# VSCode "hide comments" extension settings
+.vscode
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
