--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "flatpickr": "^4.6.13",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "validate.js": "^0.13.1"
   },
   "engines": {
     "npm": ">=9",
