--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "flatpickr": "^4.6.13",
     "moment": "^2.30.1",
     "validate.js": "^0.13.1"
