--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "vite": "^4.5.0"
   },
   "dependencies": {
+    "@glidejs/glide": "^3.6.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "flatpickr": "^4.6.13",
     "moment": "^2.30.1",
+    "swiper": "^11.0.7",
     "validate.js": "^0.13.1"
   },
   "engines": {
